# knir

./: .gitignore  CMakeLists.txt  MainWindow.hpp  README.md  func.h  generate_gaus_noise.py  generate_poisson_noise.py  main.cpp
algor/: algor.cpp  algor.h
docs/html/: algor_8h_source.html  annotated.html  classalgor-members.html  classalgor.html  classes.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  struct_b_g_r_value-members.html  struct_b_g_r_value.html
docs/html/search/: all_0.js  all_2.js  all_6.js  classes_0.js  classes_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  searchdata.js
docs/latex/: algor_8h_source.tex  annotated.tex  classalgor.tex  files.tex  refman.tex  struct_b_g_r_value.tex
gui/: MainWindow.cpp  MainWindow.hpp
imgui/: imgui-SFML.cpp  imgui-SFML.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
model/: coco.yaml
tests/: testAlgor.cpp
